# structured-agent-workflows-agy-sdd

./: .gitignore  README.md  configure_terminal.sh  pyproject.toml  skills-lock.json
.agents/: mcp_config.json
.agents/skills/bigquery-basics/: SKILL.md
.agents/skills/cloud-run-basics/: SKILL.md
.agents/skills/cloud-run-basics/references/: iac-usage.md  iam-security.md  networking.md
data/: order_items.csv  orders.csv  products.csv
docs/superpowers/plans/: 2026-07-21-bigquery-integration.md
docs/superpowers/specs/: 2026-07-21-bigquery-integration-design.md
src/: config.py  data_service.py  main.py
src/static/css/: style.css
src/templates/: dashboard.html
tests/: test_config.py  test_data_service.py  test_main.py
